--- a/app/views/layouts/client.html.erb
+++ b/app/views/layouts/client.html.erb
@@ -12,23 +12,24 @@
   </head>
   <body class="container">
 	<div class="span-24 last page_frame">
-            <div class="span-22 prepend-1 append-1 last header">
+            <div class="span-23 append-1 last header">
+              <%= image_tag 'logo.png', :alt => 'Barcode Channel' %>
                 BARCODE CHANNEL
             </div>
             <div class="span-17 prepend-1 append-1">
                 <%= yield %>
             </div>
             <div class="span-4 append-1 last">
-                <div class="navigation_item">
+                <div class="nav_item active_nav_item top_rounded">
                   Home
                 </div>
-                <div class="navigation_item">
+                <div class="nav_item ">
                   Listen
                 </div>
-                <div class="navigation_item">
+                <div class="nav_item">
                   Download
                 </div>
-                <div class="navigation_item">
+                <div class="nav_item bottom_rounded">
                   Gallery
                 </div>
             </div>
