--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,9 +1,9 @@
 <% for post in @posts %>
     <div class="news_post">
-        <div class="post_title">
+        <div class="post_title top_rounded">
           <%=h post.title %>
         </div>
-        <div class="post_body">
+        <div class="post_body bottom_rounded">
           <%=post.body %>
           <br/>
           <%= link_to "Delete this post", post, :confirm => 'Are you sure?', :method => :delete %>
