--- a/public/stylesheets/global.css
+++ b/public/stylesheets/global.css
@@ -8,10 +8,10 @@ body {
 }
 
 .header {
+    height: 68;
     background-color: black;
     color:  white;
-    font-size: 3em;
-    line-height: 1;
+    font-size: 5em;
     margin-bottom: 0.5em;
 }
 
@@ -29,4 +29,24 @@ body {
 .post_body {
     padding-left: 5px;
     background-color: #EEEEEE;
+}
+
+.nav_item {
+    background-color: #EEEEEE;
+}
+.active_nav_item {
+    background-color: black;
+    color: white;
+}
+.top_rounded {
+    -moz-border-radius-topleft: 5px;
+    -moz-border-radius-topright: 5px;
+    -webkit-border-top-left-radius: 5px;
+    -webkit-border-top-right-radius: 5px;
+}
+.bottom_rounded {
+    -moz-border-radius-bottomleft: 5px;
+    -moz-border-radius-bottomright: 5px;
+    -webkit-border-bottom-left-radius: 5px;
+    -webkit-border-bottom-right-radius: 5px;
 }
