--- a/app/views/layouts/client.html.erb
+++ b/app/views/layouts/client.html.erb
@@ -16,21 +16,19 @@
               <%= image_tag 'logo.png', :alt => 'Barcode Channel' %>
                 BARCODE CHANNEL
             </div>
-            <div class="span-17 prepend-1 append-1">
+            <div class="span-24 last nav_panel">
+              <hr style="margin:0; margin-top:5px"/>
+               &nbsp;&nbsp;&nbsp; HOME | LISTEN | DOWNLOAD | GALLERY | ABOUT THE BAND 
+            </div>
+            <div class="span-19 ">
                 <%= yield %>
             </div>
-            <div class="span-4 append-1 last">
+            <div class="span-5 last">
                 <div class="nav_item active_nav_item top_rounded">
-                  Home
-                </div>
-                <div class="nav_item ">
-                  Listen
-                </div>
-                <div class="nav_item">
-                  Download
+                  MEDIA PLAYER
                 </div>
                 <div class="nav_item bottom_rounded">
-                  Gallery
+                  THERE WILL BE A LINK TO THE MEDIA PLAYER HERE (NEW WINDOW)
                 </div>
             </div>
 	</div>
