Work on media player, added songs model

--- a/app/views/layouts/client.html.erb
+++ b/app/views/layouts/client.html.erb
@@ -17,7 +17,6 @@
                 BARCODE CHANNEL
             </div>
             <div class="span-24 last nav_panel">
-              <hr style="margin:0; margin-top:5px"/>
                &nbsp;&nbsp;&nbsp; HOME | LISTEN | DOWNLOAD | GALLERY | ABOUT THE BAND 
             </div>
             <div class="span-19 ">
@@ -28,7 +27,7 @@
                   MEDIA PLAYER
                 </div>
                 <div class="nav_item bottom_rounded">
-                  THERE WILL BE A LINK TO THE MEDIA PLAYER HERE (NEW WINDOW)
+                  <%= link_to "Listen<br/>(new window)", "media_player", :target => "_blank" %>
                 </div>
             </div>
 	</div>
