Removed edit and create links

--- a/app/views/layouts/client.html.erb
+++ b/app/views/layouts/client.html.erb
@@ -8,7 +8,7 @@
 	<!--[if lt IE 8]>
 	  <link rel="stylesheet" href="css/blueprint/ie.css" type="text/css" media="screen, projection">
 	<![endif]-->
-	<%= stylesheet_link_tag 'global' %>
+	<%= stylesheet_link_tag 'global', 'formtastic', 'formtastic_changes' %>
   </head>
   <body class="container">
 	<div class="span-24 last page_frame">
