--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -6,3 +6,4 @@
 
 
 <p><%= link_to "Back to List", posts_path %></p>
+<%= link_to "Delete this post", @post, :confirm => 'Are you sure?', :method => :delete %>
