--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -1,9 +1,9 @@
 <% for song in @songs %>
   <div class="news_post">
-    <div class="post_title top_rounded">
+    <div class="post_title">
       <%=h song.name %>
     </div>
-    <div class="post_body bottom_rounded">
+    <div class="post_body">
       <%= song.url %>
     </div>
   </div>
