--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,9 +1,9 @@
 <% for post in @posts %>
     <div class="news_post">
-        <div class="post_title top_rounded">
+        <div class="post_title ">
           <%=h post.title %>
         </div>
-        <div class="post_body bottom_rounded">
+        <div class="post_body ">
           <%=post.body %>
           <br/>
         </div>
