--- a/app/views/layouts/client.html.erb
+++ b/app/views/layouts/client.html.erb
@@ -20,8 +20,7 @@
               <div class="left_offset">
               <%= link_to "HOME", posts_path, :class => "header_links" %> |
               <%= link_to "LISTEN", songs_path, :class => "header_links" %> |
-              DOWNLOAD |
-              <%= link_to "IMAGES", photos_path, :class => "header_links" %> |
+              <%= link_to "IMAGES", images_path, :class => "header_links" %> |
               <%= link_to "ABOUT THE BAND", biography_path, :class => "header_links" %> |
               </div>
             </div>
