--- a/app/views/songs/_form.html.erb
+++ b/app/views/songs/_form.html.erb
@@ -1,12 +1,16 @@
 <% form_for @song do |f| %>
-  <%= f.error_messages %>
-  <p>
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
-  </p>
-  <p>
-    <%= f.label :url %><br />
-    <%= f.text_field :url %>
-  </p>
-  <p><%= f.submit "Submit" %></p>
+    <%= f.error_messages %>
+    <p>
+      <%= f.label :name %><br />
+      <%= f.text_field :name %>
+    </p>
+    <p>
+      <%= f.label :url %><br />
+      <%= f.text_field :url %>
+    </p>
+    <p>
+      <%= f.label :order_int %><br />
+      <%= f.text_field :order_int %>
+    </p>
+    <p><%= f.submit "Submit" %></p>
 <% end %>
