--- a/app/views/songs/manage.html.erb
+++ b/app/views/songs/manage.html.erb
@@ -3,11 +3,13 @@
   <tr>
     <th>Name</th>
     <th>Url</th>
+    <th>Order</th>
   </tr>
   <% for song in @songs %>
     <tr>
       <td><%=h song.name %></td>
       <td><%=h song.url %></td>
+      <td><%=h song.order_int %></td>
       <td><%= link_to "Show", song %></td>
       <td><%= link_to "Edit", edit_song_path(song) %></td>
       <td><%= link_to "Destroy", song, :confirm => 'Are you sure?', :method => :delete %></td>
