added demo notice, yeah?

--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -1,3 +1,7 @@
+<div class="post_body">
+    A collection of our current demos
+</div>
+
 <% for song in @songs %>
   <div class="news_post">
     <div class="post_title">
