User management, login controller n that

--- a/app/views/layouts/client.html.erb
+++ b/app/views/layouts/client.html.erb
@@ -30,6 +30,7 @@
   <div class="span-19">
     <div  class="left_offset" style="color: green; float: none"><%= flash[:notice] %></div>
     <div  class="left_offset" style="background-color: yellow; float: none"><%= flash[:warning] %></div>
+    <div  class="left_offset" style="background-color: red; float: none"><%= flash[:error] %></div>
     <div class="left_offset">
       <%= yield %>
     </div>
