--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -7,9 +7,16 @@
   <strong>Url:</strong>
   <%=h @song.url %>
 </p>
+<p>
+  <strong>Order:</strong>
+  <%=h @song.order_int %>
+</p>
 
 <p>
-  <%= link_to "Edit", edit_song_path(@song) %> |
-  <%= link_to "Destroy", @song, :confirm => 'Are you sure?', :method => :delete %> |
+
+  <% if can? :edit, song %>
+      <%= link_to "Edit", edit_song_path(@song) %> |
+      <%= link_to "Destroy", @song, :confirm => 'Are you sure?', :method => :delete %> |
+  <% end %>
   <%= link_to "View All", songs_path %>
 </p>
