added sound cloud to links

--- a/app/views/layouts/client.html.erb
+++ b/app/views/layouts/client.html.erb
@@ -47,6 +47,9 @@
       <div class="nav_item bottom_rounded top_rounded">
         <%= link_to "Myspace >>", "http://myspace.com/barcodechannel", :target => "_blank" %>
       </div>
+      <div class="nav_item bottom_rounded top_rounded">
+        <%= link_to "Soundcloud >>", "http://soundcloud.com/barcode-channel", :target => "_blank" %>
+      </div>
     </div>
 
     <script src="http://widgets.twimg.com/j/2/widget.js"></script>
