--- a/app/views/photos/new.html.erb
+++ b/app/views/photos/new.html.erb
@@ -1,19 +1,5 @@
 <h1>New photo</h1>
 
-<% form_for(@photo) do |f| %>
-  <%= f.error_messages %>
-
-  <p>
-    <%= f.label :title %><br />
-    <%= f.text_field :title %>
-  </p>
-  <p>
-    <%= f.label :string %><br />
-    <%= f.text_field :string %>
-  </p>
-  <p>
-    <%= f.submit 'Create' %>
-  </p>
-<% end %>
+<%= render :partial => 'form' %>
 
 <%= link_to 'Back', photos_path %>
