Added post link on homepage

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -11,6 +11,7 @@
         </div>
         <div class="post_body ">
           <%=post.body %>
+          <%= link_to ">>", post_path(post) %>
           <br/>
         </div>
     </div>
