--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -14,7 +14,7 @@
       <% end %>
     </div>
     <div class="post_body">
-      <%= song.url %>
+      <%= song.url.html_safe %>
     </div>
   </div>
 <% end %>
