--- a/app/views/photos/_form.html.erb
+++ b/app/views/photos/_form.html.erb
@@ -1,4 +1,4 @@
-<% semantic_form_for @photo do |f| %>
+<%= semantic_form_for @photo do |f| %>
   <%= f.error_messages %>
   <%= f.inputs %>
   <%= f.buttons %>
