--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,9 +1,4 @@
-<% semantic_form_for @post do |f| %>
-  <%= f.error_messages %>
-  <%= f.inputs %>
-  <%= f.buttons %>
-<% end %>
-
+<%= render :partial => :form %>
 
 <p><%= link_to "Back to List", posts_path %></p>
 <%= link_to "Delete this post", @post, :confirm => 'Are you sure?', :method => :delete %>
