--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,8 +1,3 @@
-<% semantic_form_for @post do |f| %>
-  <%= f.error_messages %>
-  <%= f.inputs %>
-  <%= f.buttons %>
-<% end %>
-
+<%= render :partial => :form %>
 
 <p><%= link_to "Back to List", posts_path %></p>
