--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -4,13 +4,14 @@
 <% end %>
     <div class="news_post">
         <div class="post_title ">
-          <%=h @post.title %>
+          <%= @post.title %>
           <% if can? :edit, @post %>
               <%= link_to "|Edit|", edit_post_path(@post) %>
           <% end %>
         </div>
         <div class="post_body ">
-          <%= @post.body %>
+          <% debugger %>
+          <%= @post.body.to_html.html_safe %>
           <br/>
         </div>
     </div>
