--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -10,8 +10,6 @@
           <% end %>
         </div>
         <div class="post_body ">
-          <% debugger %>
-          <%= @post.body.to_html.html_safe %>
-          <br/>
+          <%= @post.body.html_safe %>
         </div>
     </div>
