--- a/app/views/layouts/client.html.erb
+++ b/app/views/layouts/client.html.erb
@@ -20,7 +20,7 @@
     <div class="left_offset">
       <%= link_to "HOME", posts_path, :class => "header_links" %> |
       <%= link_to "LISTEN", songs_path, :class => "header_links" %> |
-      <%= link_to "IMAGES", images_path, :class => "header_links" %> |
+      <%= link_to "IMAGES", "http://www.flickr.com/photos/51843059@N06/", :class => "header_links" %> |
       <%= link_to "ABOUT THE BAND", biography_path, :class => "header_links" %> |
       <% if current_user %>
           <%= link_to 'Logout, yeah?', logout_path, :class => "header_links"%>
