--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,5 @@
 <% if can? :new, Post %>
-    <%= link_to "Add a new newpost", new_post_path %>
+    <%= link_to "New post", new_post_path %>
 <% end %>
 <% for post in @posts %>
     <div class="news_post">
