--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,4 +1,4 @@
-<%= render :partial => :form %>
+<%= render :partial => 'form' %>
 
 <p><%= link_to "Back to List", posts_path %></p>
 <%= link_to "Delete this post", @post, :confirm => 'Are you sure?', :method => :delete %>
