--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -1,5 +1,5 @@
 <div class="post_body">
-  A selection of our songs to stream, you can also grab our debut E.P. 'A Ticket Out' at our <%= link_to 'Bandcamp Page (http://barcodechannel.bandcamp.com/album/a-ticket-out)', "http://barcodechannel.bandcamp.com/album/a-ticket-out" %>
+  A selection of our songs to stream, you can also grab our debut E.P. 'A Ticket Out' at our <%= link_to 'Bandcamp Page', "http://barcodechannel.bandcamp.com/album/a-ticket-out" %>
 </div>
 
 <% if can? :new, Song %>
