--- a/app/views/layouts/client.html.erb
+++ b/app/views/layouts/client.html.erb
@@ -27,8 +27,7 @@
 <body class="container">
 <div class="span-24 last page_frame">
   <div class="span-23 append-1 last header">
-    <%= image_tag 'logo.png', :alt => 'Barcode Channel' %>
-    BARCODE CHANNEL
+    <%= image_tag 'banner.png', :alt => 'Barcode Channel' %>
   </div>
   <div class="span-24 last nav_panel">
     <div class="left_offset">
