Added bandcamp link

--- a/app/views/layouts/client.html.erb
+++ b/app/views/layouts/client.html.erb
@@ -61,6 +61,9 @@
         <%= link_to "Myspace >>", "http://myspace.com/barcodechannel", :target => "_blank" %>
       </div>
       <div class="nav_item bottom_rounded top_rounded">
+        <%= link_to "Bandcamp >>", "http://barcodechannel.bandcamp.com/", :target => "_blank" %>
+      </div>
+      <div class="nav_item bottom_rounded top_rounded">
         <%= link_to "Soundcloud >>", "http://soundcloud.com/barcode-channel", :target => "_blank" %>
       </div>
     </div>
