--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,21 +1,21 @@
 <% if can? :new, Post %>
-    <%= link_to "New post", new_post_path %>
+  <%= link_to "New post", new_post_path %>
 <% end %>
 <% for post in @posts %>
-    <div class="news_post">
-        <div class="post_title ">
-          <%=h post.title %>
-          <% if can? :edit, post %>
-              <%= link_to "|Edit|", edit_post_path(post) %>
-          <% end %>
-          <% if can? :delete, post %>
-              <%= link_to '|Delete|', post, :confirm => 'Are you sure?', :method => :delete %>
-          <% end %>
-        </div>
-        <div class="post_body ">
-          <%= post.body.html_safe %>
-          <%= link_to ">>", post_path(post) %>
-          <br/>
-        </div>
+  <div class="news_post">
+    <div class="post_title ">
+      <h2><%=h post.title %></h2>
+      <% if can? :edit, post %>
+        <%= link_to "|Edit|", edit_post_path(post) %>
+      <% end %>
+      <% if can? :delete, post %>
+        <%= link_to '|Delete|', post, :confirm => 'Are you sure?', :method => :delete %>
+      <% end %>
     </div>
+    <div class="post_body ">
+      <%= post.body.html_safe %>
+      <%= link_to ">>", post_path(post) %>
+      <br/>
+    </div>
+  </div>
 <% end %>
