--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,15 +1,15 @@
 
 <% if can? :new, Post %>
-    <%= link_to "Add a new newpost", new_post_path %>
+  <%= link_to "Add a new newpost", new_post_path %>
 <% end %>
-    <div class="news_post">
-        <div class="post_title ">
-          <%= @post.title %>
-          <% if can? :edit, @post %>
-              <%= link_to "|Edit|", edit_post_path(@post) %>
-          <% end %>
-        </div>
-        <div class="post_body ">
-          <%= @post.body.html_safe %>
-        </div>
-    </div>
+<div class="news_post">
+  <div class="post_title ">
+    <h2><%= link_to @post.title, @post %></h2>
+    <% if can? :edit, @post %>
+      <%= link_to "|Edit|", edit_post_path(@post) %>
+    <% end %>
+  </div>
+  <div class="post_body ">
+    <%= @post.body.html_safe %>
+  </div>
+</div>
