--- a/public/stylesheets/global.css
+++ b/public/stylesheets/global.css
@@ -17,7 +17,11 @@ div.header_links {
 }
 
 div.page_frame {
-    background-color: #3E3D42;
+  background-color: #3E3D42;
+
+  -moz-box-shadow: 0px 1px 50px #222;
+  -webkit-box-shadow: 0px 1px 50px #222;
+  box-shadow: 0px 1px 50px #222;
 }
 
 div.header {
