--- a/public/stylesheets/global.css
+++ b/public/stylesheets/global.css
@@ -89,6 +89,11 @@ div.post_body {
   border: solid 1px #333;
 }
 
+div.post_body h4 {
+  color: #85B931;
+  margin-bottom:2px;
+}
+
 div.nav_panel {
     background-color: #85B931;
     color:  black;
@@ -108,6 +113,16 @@ div.side_panel h4 {
     color: white;
     font-size: 120%;
     margin-bottom: 10px;
+}
+
+div.inset {
+  border-left: 1px solid #666;
+  padding-left:8px;
+}
+
+div.inset p{
+  font-family: Verdana;
+  font-size: 12px;
 }
 
 ul.side_nav {
