--- a/app/views/photos/_form.html.erb
+++ b/app/views/photos/_form.html.erb
@@ -1,5 +1,7 @@
-<%= semantic_form_for @photo do |f| %>
-  <%= f.error_messages %>
-  <%= f.inputs %>
+<%= semantic_form_for @photo, :html => {:multipart => true} do |f| %>
+  <%= f.inputs :notes %>
+  <%= f.inputs do %>
+    <%= f.input :image, :as => :file %>
+  <% end %>
   <%= f.buttons %>
 <% end %>
