--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -3,9 +3,9 @@
     <h2>Image Channel</h2>
   </div>
   <div class="post_body">
-    <ul class="photo">
+    <ul id="photo_list">
       <% @photos.each do |photo| %>
-        <li><%= link_to image_tag(photo.image_url(:thumb).to_s), photo %></a></li>
+        <%= link_to raw("<li><div class='photo'>#{image_tag(photo.image_url(:thumb).to_s)}</div></li>"), photo %>
       <% end %>
     </ul>
   </div>
