Photo uploader v1 completed!

--- a/app/views/layouts/client.html.erb
+++ b/app/views/layouts/client.html.erb
@@ -33,7 +33,7 @@
     <ul class="menu left_offset">
       <li><%= link_to "NEWS", posts_path %></li>
       <li><%= link_to "LISTEN", songs_path %></li>
-      <li><%= link_to "IMAGES", "http://www.flickr.com/photos/51843059@N06/" %></li>
+      <li><%= link_to "IMAGES", photos_path %></li>
       <li><%= link_to "ABOUT THE BAND", biography_path %></li>
       <% if current_user %>
         <li><%= link_to 'Subscribers', subscribers_path %></li>
