--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -3,15 +3,17 @@
     <h2>Image Channel</h2>
   </div>
   <div class="post_body">
+    <% if can? :new, Post %>
+      <%= link_to 'New photo', new_photo_path %>
+    <% end %>
     <ul id="photo_list">
       <% @photos.each do |photo| %>
-        <%= link_to raw("<li><div class='photo'>#{image_tag(photo.image_url(:thumb).to_s)}</div></li>"), photo %>
+        <%= link_to raw("<li>#{image_tag(photo.image_url(:thumb).to_s)}</li>"), photo %>
       <% end %>
     </ul>
   </div>
 
   <br />
 
-  <%= link_to 'New photo', new_photo_path %>
 </div>
 
