--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -1,8 +1,18 @@
-<%= image_tag @photo.image_url(:big).to_s %>
+<div class="news_post">
+  <div class="post_title">
+    <h2><%= link_to "<< Back to gallery ",photos_path %></h2>
+  </div>
+  <div class="post_body">
+    <div id="photo_show">
+      <%= image_tag @photo.image_url(:big).to_s %>
+    </div>
 
-<p>
-  <%=h @photo.notes %>
-</p>
-
-<%= link_to 'Edit', edit_photo_path(@photo) %> |
-<%= link_to 'Back', photos_path %>
+    <p>
+      <%=h @photo.notes %>
+    </p>
+    <% if can? :new, Post %>
+      <%= link_to 'Edit', edit_photo_path(@photo) %> |
+      <%= link_to 'Back', photos_path %>
+    <% end %>
+  </div>
+</div>
