--- a/app/views/layouts/client.html.erb
+++ b/app/views/layouts/client.html.erb
@@ -9,6 +9,9 @@
       <link rel="stylesheet" href="css/blueprint/ie.css" type="text/css" media="screen, projection">
     <![endif]-->
   <%= stylesheet_link_tag 'global', 'formtastic', 'formtastic_changes' %>
+  <%= javascript_include_tag :defaults %>
+  <%= csrf_meta_tag %>
+  
   <script type="text/javascript">
 
     var _gaq = _gaq || [];
